--- a/index.html
+++ b/index.html
@@ -364,6 +364,20 @@
           </span>
         </label><br>
         <label>
+          <input type="checkbox" name="symptom" value="身體疼痛"> 身體疼痛
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">身體疼痛</span>
+          </span>
+        </label><br>
+        <label>
+          <input type="checkbox" name="symptom" value="不能轉側"> 不能轉側
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">肢體僵硬、轉動困難</span>
+          </span>
+        </label><br>
+        <label>
           <input type="checkbox" name="symptom" value="咳嗽"> 咳嗽
           <span class="tooltip-wrapper">
             <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
@@ -431,6 +445,13 @@
           </span>
         </label><br>
         <label>
+          <input type="checkbox" name="symptom" value="不口渴"> 不口渴
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">不想喝水</span>
+          </span>
+        </label><br>
+        <label>
           <input type="checkbox" name="symptom" value="夜熱而渴"> 夜熱而渴
           <span class="tooltip-wrapper">
             <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
@@ -459,6 +480,13 @@
           </span>
         </label><br>
         <label>
+          <input type="checkbox" name="symptom" value="熱利下重"> 熱利下重
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">便次頻繁、氣味惡臭，排便時肛門墜脹如墜物感</span>
+          </span>
+        </label><br>
+        <label>
           <input type="checkbox" name="symptom" value="腹滿"> 腹滿
           <span class="tooltip-wrapper">
             <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
@@ -477,6 +505,20 @@
           <span class="tooltip-wrapper">
             <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
             <span class="tooltip-text">上腹部除了疼痛，還有不舒服的脹滿感和結塊感</span>
+          </span>
+        </label><br>
+        <label>
+          <input type="checkbox" name="symptom" value="心下痞"> 心下痞
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">劍突下、胃脘部位不是脹，也不是痛，而是不通、滿滿的、不舒適的感覺</span>
+          </span>
+        </label><br>
+        <label>
+          <input type="checkbox" name="symptom" value="心下痞硬"> 心下痞硬
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">劍突下、胃脘部位不通、滿滿的、不舒適的感覺，按之有堅硬感，但不一定疼痛</span>
           </span>
         </label><br>
         <label>
@@ -509,6 +551,13 @@
           <span class="tooltip-wrapper">
             <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
             <span class="tooltip-text">胸部側面（肋骨下緣處）脹悶不舒、隱痛、情志不暢</span>
+          </span>
+        </label><br>
+        <label>
+          <input type="checkbox" name="symptom" value="胸脅滿而微結"> 胸脅滿而微結
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">胸部側面（肋骨下緣處）脹滿、不舒暢、有壓迫感，出現局部氣滯、瘀阻傾向</span>
           </span>
         </label><br>
         <label>
@@ -561,6 +610,13 @@
           </span>
         </label><br>
         <label>
+          <input type="checkbox" name="symptom" value="噯氣頻作"> 噯氣頻作
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">反覆打嗝的症狀</span>
+          </span>
+        </label><br>
+        <label>
           <input type="checkbox" name="symptom" value="咽燥"> 咽燥
           <span class="tooltip-wrapper">
             <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
@@ -568,10 +624,31 @@
           </span>
         </label><br>
         <label>
+          <input type="checkbox" name="symptom" value="咽中傷"> 咽中傷
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">咽喉出現灼痛、紅腫、潰爛等症狀</span>
+          </span>
+        </label><br>
+        <label>
+          <input type="checkbox" name="symptom" value="不能語言"> 不能語言
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">咽部病變，損傷聲帶而使語音受阻</span>
+          </span>
+        </label><br>
+        <label>
           <input type="checkbox" name="symptom" value="口苦"> 口苦
           <span class="tooltip-wrapper">
             <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
             <span class="tooltip-text">口中發苦</span>
+          </span>
+        </label><br>
+        <label>
+          <input type="checkbox" name="symptom" value="惡水"> 惡水
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">飲水後反胃、嘔吐</span>
           </span>
         </label><br>
         <label>
@@ -607,6 +684,13 @@
       <details class="symptom-group">
         <summary>太陰/虛寒(中焦虛寒)</summary>
         <label>
+          <input type="checkbox" name="symptom" value="心悸"> 心悸
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">心悸</span>
+          </span>
+        </label><br>
+        <label>
           <input type="checkbox" name="symptom" value="少腹脹滿證"> 少腹脹滿證
           <span class="tooltip-wrapper">
             <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
@@ -618,6 +702,20 @@
           <span class="tooltip-wrapper">
             <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
             <span class="tooltip-text">腹部疼痛</span>
+          </span>
+        </label><br>
+        <label>
+          <input type="checkbox" name="symptom" value="腹中冷痛"> 腹中冷痛
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">腹部有寒冷感且伴隨疼痛(通常是刺痛或絞痛)</span>
+          </span>
+        </label><br>
+        <label>
+          <input type="checkbox" name="symptom" value="腹中雷鳴"> 腹中雷鳴
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">腸胃內氣體運動活躍，腸道「咕嚕咕嚕」響動</span>
           </span>
         </label><br>
         <label>
@@ -646,6 +744,13 @@
           <span class="tooltip-wrapper">
             <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
             <span class="tooltip-text">腹瀉</span>
+          </span>
+        </label><br>
+        <label>
+          <input type="checkbox" name="symptom" value="寒嘔"> 寒嘔
+          <span class="tooltip-wrapper">
+            <button type="button" class="infobutton explain-btn" onclick="toggleTooltip(this)">ℹ</button>
+            <span class="tooltip-text">嘔吐伴隨著惡寒感</span>
           </span>
         </label><br>
         <label>
@@ -1034,30 +1139,123 @@
         // 假設湯方配方(要新增，和1140相同)
         //加入湯方(要刪掉)
         const formulaIngredients = {
-            "桂枝湯": ["桂枝", "白芍", "甘草", "生薑", "大棗"],
-            "麻黃湯": ["麻黃", "桂枝", "杏仁", "甘草"],
-            "白虎湯": ["石膏", "知母", "甘草", "粳米"],
-            "理中湯": ["人參", "白朮", "甘草", "乾薑"],
-            "葛根湯": ["葛根", "麻黃", "桂枝", "芍藥", "甘草", "生薑", "大棗"],
-            "小青龍湯": ["麻黃", "桂枝", "芍藥", "甘草", "乾薑", "細辛", "五味子", "半夏"],
-            "大承氣湯": ["大黃", "厚朴", "枳實", "芒硝"],
+            "桂枝湯": ["桂枝", "芍藥", "甘草", "大棗", "生薑"],
+            "桂枝加桂湯": ["桂枝", "芍藥", "甘草", "大棗", "生薑"],
+            "桂枝加芍藥湯": ["桂枝", "芍藥", "甘草", "大棗", "生薑"],
+            "桂枝加大黃湯": ["桂枝", "芍藥", "甘草", "大棗", "生薑", "大黃"],
+            "桂枝加朴杏湯": ["桂枝", "芍藥", "甘草", "大棗", "生薑", "厚朴", "杏仁"],
+            "桂枝加附子湯": ["桂枝", "芍藥", "甘草", "大棗", "生薑", "附子"],
+            "桂枝去芍藥湯": ["桂枝", "甘草", "大棗", "生薑"],
+            "桂枝去芍藥加附子湯": ["桂枝", "甘草", "大棗", "生薑", "附子"],
+            "桂枝去芍藥加龍牡救逆湯": ["桂枝", "甘草", "大棗", "生薑", "蜀漆", "龍骨", "牡蠣"],
+            "桂甘龍牡湯": ["桂枝", "甘草", "龍骨", "牡蠣"],
+            "桂枝人參湯": ["桂枝", "甘草", "人參", "白朮", "乾薑"],
+            "桂枝附子湯": ["桂枝", "甘草", "大棗", "生薑", "附子"],
+            "白朮附子湯": ["甘草", "大棗", "生薑", "附子", "白朮"],
+            "桂枝去桂加苓朮湯": ["芍藥", "甘草", "大棗", "生薑", "茯苓"],
+            "桂枝新加湯": ["桂枝", "芍藥", "甘草", "大棗", "生薑", "人參"],
+            "陽旦湯": ["桂枝", "芍藥", "甘草", "大棗", "生薑", "黃芩"],
+            "陰旦湯": ["桂枝", "芍藥", "甘草", "大棗", "生薑", "乾薑"],
+            "麻黃湯": ["麻黃", "桂枝", "甘草", "杏仁"],
+            "大青龍湯": ["麻黃", "桂枝", "甘草", "杏仁", "生薑", "大棗", "石膏"],
+            "小青龍湯": ["麻黃", "桂枝", "甘草", "芍藥", "乾薑", "細辛", "五味子", "半夏"],
+            "桂麻各半湯": ["麻黃", "桂枝", "甘草", "芍藥", "杏仁", "大棗", "生薑"],
+            "桂二麻一湯": ["麻黃", "桂枝", "甘草", "芍藥", "杏仁", "大棗"],
+            "桂二越一湯": ["麻黃", "桂枝", "甘草", "芍藥", "大棗", "石膏"],
+            "麻黃附子細辛湯": ["麻黃", "附子", "細辛"],
+            "麻黃附子甘草湯": ["麻黃", "附子", "甘草"],
+            "麻杏石甘湯": ["麻黃", "杏仁", "甘草", "石膏"],
+            "麻黃連軺赤小豆湯": ["麻黃", "杏仁", "甘草", "赤小豆", "連軺", "梓白皮", "大棗", "生薑"],
+            "葛根湯": ["葛根", "麻黃", "桂枝", "芍藥", "甘草", "大棗", "生薑"],
+            "葛根加半夏湯": ["葛根", "麻黃", "桂枝", "芍藥", "甘草", "大棗", "生薑", "半夏"],
+            "葛根芩連湯": ["葛根", "黃芩", "黃連", "甘草"],
+            "桂枝加葛根湯": ["葛根", "桂枝", "芍藥", "甘草", "大棗", "生薑"],
+            "白虎湯": ["石膏", "知母", "梗米", "甘草"],
+            "白虎加人參湯": ["石膏", "知母", "梗米", "甘草", "人參"],
+            "竹葉石膏湯": ["石膏", "梗米", "甘草", "人參", "麥冬", "竹葉", "半夏"],
+            "調胃承氣湯": ["大黃", "芒硝", "甘草"],
             "小承氣湯": ["大黃", "厚朴", "枳實"],
-            "陽旦湯": ["桂枝", "芍藥", "甘草", "生薑", "大棗", "黃芩"],
+            "大承氣湯": ["大黃", "厚朴", "枳實", "芒硝"],
             "桃核承氣湯": ["大黃", "芒硝", "甘草", "桃核", "桂枝"],
             "抵當湯": ["大黃", "桃仁", "水蛭", "虻蟲"],
             "大陷胸湯": ["大黃", "芒硝", "甘遂"],
+            "小陷胸湯": ["黃連", "半夏", "栝簍實"],
             "十棗湯": ["大棗", "甘遂", "芫花", "大戟"],
             "梔子豉湯": ["梔子", "豆豉"],
-            "茵陳蒿湯": ["梔子", "大黃", "茵陳蒿"],
-            "梔子柏皮湯": ["梔子", "黃柏", "甘草"],
+            "梔子甘草豉湯": ["梔子", "豆豉", "甘草"],
+            "梔子生薑豉湯": ["梔子", "豆豉", "生薑"],
             "梔子厚朴湯": ["梔子", "厚朴", "枳實"],
             "梔子乾薑湯": ["梔子", "乾薑"],
-            "小柴胡湯": ["柴胡", "黃苓", "人參", "半夏", "甘草", "大棗", "生薑"],
-            "大柴胡湯": ["柴胡", "黃苓", "半夏", "大棗", "生薑", "枳實", "芍藥", "大黃"],
-            "黃芩湯": ["黃苓", "芍藥", "甘草", "大棗"],
+            "梔子柏皮湯": ["梔子", "黃柏", "甘草"],
+            "茵陳蒿湯": ["梔子", "大黃", "茵陳蒿"],
+            "枳實梔豉湯": ["梔子", "豆豉", "枳實"],
+            "枳實梔豉加大黃湯": ["梔子", "豆豉", "枳實", "大黃"],
+            "小柴胡湯": ["柴胡", "黃芩", "人參", "半夏", "甘草", "大棗", "生薑"],
+            "大柴胡湯": ["柴胡", "黃芩", "半夏", "大棗", "生薑", "枳實", "芍藥", "大黃"],
+            "柴胡加芒硝湯": ["柴胡", "黃芩", "人參", "半夏", "甘草", "大棗", "生薑", "芒硝"],
+            "柴胡桂枝湯": ["柴胡", "黃芩", "人參", "半夏", "甘草", "大棗", "生薑", "桂枝", "芍藥"],
+            "柴胡桂枝乾薑湯": ["柴胡", "黃芩", "乾薑", "桂枝", "甘草", "栝簍根", "牡蠣"],
+            "柴胡龍牡湯": ["柴胡", "半夏", "茯苓", "桂枝", "大黃", "龍骨", "牡蠣", "鉛丹", "人參", "大棗", "生薑"],
+            "黃芩湯": ["黃芩", "芍藥", "甘草", "大棗"],
+            "黃芩加薑半湯": ["黃芩", "芍藥", "甘草", "大棗", "生薑", "半夏"],
+            "大黃黃連瀉心湯": ["黃連", "大黃"],
+            "附子瀉心湯": ["黃連", "大黃", "黃芩", "附子"],
+            "甘草瀉心湯": ["黃連", "黃芩", "甘草", "乾薑", "半夏", "大棗"],
+            "半夏瀉心湯": ["黃連", "黃芩", "甘草", "乾薑", "半夏", "大棗", "人參"],
+            "生薑瀉心湯": ["黃連", "黃芩", "甘草", "乾薑", "半夏", "大棗", "人參", "生薑"],
+            "乾薑芩連人參湯": ["黃連", "黃芩", "乾薑", "人參"],
             "黃連湯": ["黃連", "桂枝", "甘草", "乾薑", "半夏", "大棗", "人參"],
+            "旋覆代赭石湯": ["旋覆花", "甘草", "代赭石", "半夏", "大棗", "人參", "生薑"],
+            "四逆湯": ["附子", "甘草", "乾薑"],
+            "通脈四逆湯": ["附子", "甘草", "乾薑", "蔥"],
+            "通脈四逆加豬膽汁湯": ["附子", "甘草", "乾薑", "豬膽汁"],
+            "乾薑附子湯": ["附子", "乾薑"],
+            "四逆加人參湯": ["附子", "甘草", "乾薑", "人參"],
+            "茯苓四逆湯": ["附子", "甘草", "乾薑", "人參", "茯苓"],
+            "附子湯": ["附子", "白朮", "芍藥", "人參", "茯苓"],
+            "真武湯": ["附子", "白朮", "芍藥", "生薑", "茯苓"],
+            "白通湯": ["附子", "乾薑", "蔥白"],
+            "白通加尿膽湯": ["附子", "乾薑", "蔥白", "人尿", "豬膽汁"],
+            "當歸四逆湯": ["當歸", "桂枝", "芍藥", "甘草", "通草", "細辛", "大棗"],
+            "當歸四逆加茱薑湯": ["當歸", "桂枝", "芍藥", "甘草", "通草", "細辛", "大棗", "吳茱萸", "生薑"],
+            "甘草湯": ["甘草"],
+            "桔梗湯": ["甘草", "桔梗"],
+            "桂枝甘草湯": ["甘草", "桂枝"],
+            "甘草乾薑湯": ["甘草", "甘薑"],
+            "芍藥甘草湯": ["甘草", "芍藥"],
+            "芍藥甘草附子湯": ["甘草", "芍藥", "附子"],
+            "甘草附子湯": ["甘草", "桂枝", "附子", "白朮"],
+            "茯苓甘草湯": ["甘草", "桂枝", "茯苓", "生薑"],
+            "苓桂甘棗湯": ["甘草", "桂枝", "茯苓", "大棗"],
+            "苓桂朮甘湯": ["甘草", "桂枝", "茯苓", "白朮"],
+            "厚朴薑夏甘參湯": ["甘草", "厚朴", "生薑", "半夏", "人參"],
+            "小建中湯": ["甘草", "桂枝", "芍藥", "大棗", "生薑", "膠飴"],
+            "灸甘草湯": ["甘草", "桂枝", "人參", "大棗", "生薑", "生地", "阿膠", "清酒", "麻子仁"],
+            "理中丸湯": ["甘草", "乾薑", "人參", "白朮"],
+            "烏梅丸": ["烏梅", "乾薑", "人參", "細辛", "黃連", "黃柏", "當歸", "附子", "蜀椒", "桂枝", "苦酒"],
+            "麻仁丸": ["大黃", "厚朴", "枳實", "麻子仁", "芍藥", "杏仁"],
+            "蜜煎導": ["蜜"],
+            "豬膽汁導": ["豬膽"],
+            "土瓜根方": ["土瓜"],
+            "抵當丸": ["大黃", "桃仁", "水蛭", "虻蟲"],
+            "大陷胸丸": ["大黃", "甘遂", "杏仁", "葶藶子", "芒硝", "蜜"],
+            "五苓散": ["茯苓", "豬苓", "澤瀉", "白朮", "桂"],
+            "文蛤散": ["文蛤"],
+            "三物白散": ["桔梗", "巴豆", "貝母"],
+            "半夏湯及散": ["半夏", "桂枝"],
             "四逆湯": ["柴胡", "芍藥", "枳實", "甘草"],
-            "瓜蒂散": ["瓜蒂", "赤小豆", "香豉"]
+            "瓜蒂散": ["瓜蒂", "赤小豆", "香豉"],
+            "牡蠣澤瀉散": ["牡蠣", "澤瀉", "括蔞根", "蜀漆", "商陸", "海藻", "葶藶"],
+            "燒焜散": ["燒焜灰"],
+            "赤石脂余餘糧湯": ["赤石脂", "余餘糧"],
+            "桃花湯": ["赤石脂", "乾薑", "糯米"],
+            "豬苓散": ["茯苓", "豬苓", "澤瀉", "滑石", "阿膠"],
+            "吳茱萸湯": ["吳茱萸", "人參", "大棗", "生薑"],
+            "麻黃升麻湯": ["麻黃", "升麻", "當歸", "知母", "黃芩", "萎蕤", "石膏", "白朮", "乾薑", "芍藥", "天冬", "桂枝", "茯苓", "甘草"],
+            "黃連阿膠湯": ["黃連", "黃芩", "芍藥", "雞子黃", "阿膠"],
+            "苦酒湯": ["苦酒", "半夏", "雞子白"],
+            "豬膚湯": ["豬膚", "蜜", "白粉"],
+            "白頭翁湯": ["白頭翁", "秦皮", "黃柏", "黃連"]
         };
 
         const ingredients = formulaIngredients[formula]?.join(", ") || "無配方資料";
@@ -1292,14 +1490,14 @@
         const adjunctFormulas = {
           "桂枝湯": [
             { condition: "若脖子與背部緊繃、僵硬、不舒適、低頭抬頭都不靈", adjunct: "葛根湯" },
-            { condition: "若呼吸急促、氣逆、咳喘等症狀", adjunct: "樸杏湯" },
+            { condition: "若呼吸急促、氣逆、咳喘等症狀", adjunct: "朴杏湯(厚朴、杏仁)" },
             { condition: "胸部悶滿", adjunct: "「去」芍藥湯"},
             { condition: "汗出不斷、小便困難而不暢、四肢微急，難以屈伸", adjunct: "附子湯"},
             { condition: "怕冷，甚至風吹就發抖，不易取暖", adjunct: "「去」芍藥加附子湯"},
-            { condition: "服桂枝湯後，寒熱交替，一天發作兩次", adjunct: "麻黃湯(桂枝二麻黃一湯)"},
-            { condition: "面部出紅、身體有瘙癢的感覺、感到非常怕冷", adjunct: "麻黃湯(桂枝麻黃各半湯)"},
+            { condition: "服桂枝湯後，寒熱交替，一天發作兩次", adjunct: "麻黃湯[桂枝二麻黃一湯]"},
+            { condition: "面部出紅、身體有瘙癢的感覺、感到非常怕冷", adjunct: "麻黃湯[桂枝麻黃各半湯]"},
             { condition: "頭項部強痛、持續微微發熱、沒有發汗、小便不太順", adjunct: "茯苓白朮湯"},
-            { condition: "發熱怕冷，熱多寒少", adjunct: "越婢湯(桂枝二越婢一湯)"}
+            { condition: "發熱怕冷，熱多寒少", adjunct: "越婢湯[桂枝二越婢一湯]"}
           ],
           "葛根湯": [
             { condition: "若沒有腹瀉，而有嘔吐", adjunct: "半夏湯" },
@@ -1313,12 +1511,21 @@
           ],
           "小柴胡湯": [
             { condition: "大便不通", adjunct: "芒硝" },
-            { condition: "發熱、頭痛、項強(頸部僵硬)", adjunct: "桂枝、芍藥" },
-            { condition: "發熱、頭痛、項強", adjunct: "枳實、大黃湯" }
+            { condition: "發熱、頭痛、項強(頸部僵硬)", adjunct: "桂枝、芍藥" }
           ],
           "黃芩湯": [
             { condition: "想嘔吐或反胃，胸部與肋間部感覺不舒適、悶痛", adjunct: "薑半湯(生薑、半夏)" }
-        
+          ],
+          "四逆湯": [
+            { condition: "身體出汗，精神狀態衰弱無力", adjunct: "蔥[通脈四逆湯]" },
+            { condition: "常感四肢冰冷或麻木，煩躁欲死", adjunct: "豬膽汁[通脈四逆加豬膽汁湯]" },
+            { condition: "四肢冰冷,腹瀉不止", adjunct: "人參" }
+          ],
+          "黃芩湯": [
+            { condition: "口乾,煩躁", adjunct: "尿膽湯(人尿、豬膽汁)" }
+          ],
+          "當歸四逆湯": [
+            { condition: "寒邪長期滯留於體內(例如:苔白滑、神疲欲寐、排便稀溏...)", adjunct: "茱薑湯(吳茱萸、生薑)" }
           ]
         };
 
@@ -1427,6 +1634,29 @@
     { name: "寒熱錯雜", symptoms: ["胸中煩熱", "吐利", "下利"], formula: "黃連湯" },
     { name: "少陰病", symptoms: ["汗出", "身熱不去", "內拘急", "四肢疼", "下利", "厥逆", "惡寒", "厥冷"], formula: "四逆湯" },
     { name: "結胸證", symptoms: ["厥冷", "胸中煩熱", "心煩", "不能進食"], formula: "瓜蒂散" },
+    { name: "少陽病兼裡虛寒", symptoms: ["胸脅滿而微結", "吐利", "口渴", "發熱", "下利"], formula: "柴胡桂枝乾薑湯" },
+    { name: "結胸證", symptoms: ["厥冷", "胸中煩熱", "心煩", "不能進食"], formula: "瓜蒂散" },
+    { name: "陽明病", symptoms: ["心煩", "胸中煩熱"], formula: "大黃黃連瀉心湯" },
+    { name: "寒熱錯雜痞證", symptoms: ["心下痞", "寒嘔", "下利"], formula: "附子瀉心湯" },
+    { name: "寒熱錯雜痞證", symptoms: ["心下痞", "吐利", "腹中雷鳴", "下利"], formula: "甘草瀉心湯" },
+    { name: "寒熱錯雜痞證", symptoms: ["心下痞硬", "乾嘔", "腹中雷鳴", "下利"], formula: "半夏瀉心湯" },
+    { name: "寒熱錯雜痞證", symptoms: ["心下痞", "惡水", "吐利"], formula: "生薑瀉心湯" },
+    { name: "寒熱錯雜痞證", symptoms: ["噯氣頻作", "吐利", "心下痞硬"], formula: "旋覆代赭石湯" },
+    { name: "寒熱錯雜重寒證", symptoms: ["腹中痛", "下利"], formula: "乾薑芩連人參湯" },
+    { name: "陽虛中寒", symptoms: ["腹中冷痛", "吐利"], formula: "乾薑附子湯" },
+    { name: "少陰證", symptoms: ["厥冷", "下利"], formula: "白通湯" },
+    { name: "少陰證", symptoms: ["下利", "心悸", "身重"], formula: "茯苓四逆湯" },
+    { name: "陽明腑實證", symptoms: ["身體疼痛", "不能轉側", "腹中痛"], formula: "附子湯" },
+    { name: "陽明腑實證", symptoms: ["小便不利", "身重", "身體疼痛", "腹痛", "下利", "心悸", "咽痛"], formula: "真武湯" },
+    { name: "厥陰病", symptoms: ["厥冷"], formula: "當歸四逆湯" },
+    { name: "厥陰病", symptoms: ["熱利下重"], formula: "白頭翁湯" },
+    { name: "少陰病", symptoms: ["小便不利", "身重", "身體疼痛", "腹痛", "心悸", "下利", "咽痛", "胸部滿悶", "心煩"], formula: "豬膚湯" },
+    { name: "少陰病", symptoms: ["小便不利", "身重", "身體疼痛", "腹痛", "下利", "心悸", "吐利", "厥冷", "心煩"], formula: "吳茱萸湯" },
+    { name: "陽明病", symptoms: ["發熱", "口渴", "小便不利"], formula: "豬苓散" },
+    { name: "少陰病", symptoms: ["小便不利", "身重", "身體疼痛", "腹痛", "下利", "心悸", "咽中傷", "不能語言"], formula: "苦酒湯" },
+    { name: "少陰病", symptoms: ["小便不利", "身重", "身體疼痛", "腹痛", "下利", "心悸", "心煩", "臥起不安"], formula: "黃連阿膠湯" },
+    { name: "霍亂病", symptoms: ["吐利", "下利", "頭痛", "發熱", "身體疼痛", "惡寒", "厥冷", "不口渴", "心煩"], formula: "理中丸湯" },
+    
   ];
 
   document.getElementById('diagnosisForm').addEventListener('submit', function (e) {
