--- a/index.html
+++ b/index.html
@@ -1264,14 +1264,14 @@
         const adjunctFormulas2 = {
           "桂枝湯": [
             { condition: "若脖子與背部緊繃、僵硬、不舒適、低頭抬頭都不靈", adjunct: "葛根湯" },
-            { condition: "若呼吸急促、氣逆、咳喘等症狀", adjunct: "樸杏湯" },
+            { condition: "若呼吸急促、氣逆、咳喘等症狀", adjunct: "朴杏湯(厚朴、杏仁)" },
             { condition: "胸部悶滿", adjunct: "「去」芍藥湯"},
             { condition: "汗出不斷、小便困難而不暢、四肢微急，難以屈伸", adjunct: "附子湯"},
             { condition: "怕冷，甚至風吹就發抖，不易取暖", adjunct: "「去」芍藥加附子湯"},
-            { condition: "服桂枝湯後，寒熱交替，一天發作兩次", adjunct: "麻黃湯(桂枝二麻黃一湯)"},
-            { condition: "面部出紅、身體有瘙癢的感覺、感到非常怕冷", adjunct: "麻黃湯(桂枝麻黃各半湯)"},
+            { condition: "服桂枝湯後，寒熱交替，一天發作兩次", adjunct: "麻黃湯[桂枝二麻黃一湯]"},
+            { condition: "面部出紅、身體有瘙癢的感覺、感到非常怕冷", adjunct: "麻黃湯[桂枝麻黃各半湯]"},
             { condition: "頭項部強痛、持續微微發熱、沒有發汗、小便不太順", adjunct: "茯苓白朮湯"},
-            { condition: "發熱怕冷，熱多寒少", adjunct: "越婢湯(桂枝二越婢一湯)"}
+            { condition: "發熱怕冷，熱多寒少", adjunct: "越婢湯[桂枝二越婢一湯]"}
           ],
           "葛根湯": [
             { condition: "若沒有腹瀉，而有嘔吐", adjunct: "半夏湯" },
@@ -1285,12 +1285,21 @@
           ],
           "小柴胡湯": [
             { condition: "大便不通", adjunct: "芒硝" },
-            { condition: "發熱、頭痛、項強(頸部僵硬)", adjunct: "桂枝、芍藥" },
-            { condition: "發熱、頭痛、項強", adjunct: "枳實、大黃湯" }
+            { condition: "發熱、頭痛、項強(頸部僵硬)", adjunct: "桂枝、芍藥" }
           ],
           "黃芩湯": [
             { condition: "想嘔吐或反胃，胸部與肋間部感覺不舒適、悶痛", adjunct: "薑半湯(生薑、半夏)" }
-        
+          ],
+          "四逆湯": [
+            { condition: "身體出汗，精神狀態衰弱無力", adjunct: "蔥[通脈四逆湯]" },
+            { condition: "常感四肢冰冷或麻木，煩躁欲死", adjunct: "豬膽汁[通脈四逆加豬膽汁湯]" },
+            { condition: "四肢冰冷,腹瀉不止", adjunct: "人參" }
+          ],
+          "黃芩湯": [
+            { condition: "口乾,煩躁", adjunct: "尿膽湯(人尿、豬膽汁)" }
+          ],
+          "當歸四逆湯": [
+            { condition: "寒邪長期滯留於體內(例如:苔白滑、神疲欲寐、排便稀溏...)", adjunct: "茱薑湯(吳茱萸、生薑)" }
           ]
         };
 
